add limit/offset pagination to list subscriptions
